As noted in bug 256187, the fileWatcher plasmoid can use a lot of memory, particularly when first reading a file. This turns out to be because the whole file is added to the textDocument, instead of just the last few lines.

As a bonus, fix an (unreported) bug where if a line matched two filters,
it could be printed twice.

BUG: 256187
REVIEW: 105940
FIXED-IN: 4.9.1